--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,58 +8,31 @@
   "theme_color": "#3B82F6",
   "icons": [
     {
-      "src": "/favicon-16x16.svg",
-      "sizes": "16x16",
-      "type": "image/svg+xml"
+      "src": "/favicon.ico",
+      "sizes": "16x16 32x32",
+      "type": "image/x-icon"
     },
     {
-      "src": "/favicon-32x32.svg",
-      "sizes": "32x32",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/icon.svg",
-      "sizes": "64x64",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/apple-touch-icon.svg",
-      "sizes": "180x180",
-      "type": "image/svg+xml"
-    },
-    {
-<<<<<<< HEAD
       "src": "/icon-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/icon-48x48.png",
-      "sizes": "72x72 96x96 144x144",
-      "type": "image/png"
+      "src": "/logo.jpg",
+      "sizes": "180x180",
+      "type": "image/jpeg"
     },
     {
-      "src": "/icon-48x48.png",
+      "src": "/logo.jpg",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-48x48.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-=======
-      "src": "/icon.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/jpeg",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon.svg",
+      "src": "/logo.jpg",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/jpeg",
       "purpose": "maskable any"
->>>>>>> 536567cbfe076a9c593c98412aa356807796f041
     }
   ]
 }
