--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,20 +18,20 @@
       "type": "image/png"
     },
     {
-      "src": "/logo.jpg",
+      "src": "/devora-removebg-preview.png",
       "sizes": "180x180",
-      "type": "image/jpeg"
+      "type": "image/png"
     },
     {
-      "src": "/logo.jpg",
+      "src": "/devora-removebg-preview.png",
       "sizes": "192x192",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/logo.jpg",
+      "src": "/devora-removebg-preview.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "maskable any"
     }
   ]
